(lang dune 3.10)

(generate_opam_files true)

(authors "ProgramingIsTheFuture")
(maintainers "ProgramingIsTheFuture")
(homepage "https://github.com/ProgramingIsTheFuture/ppx_default")
(bug_reports "https://github.com/ProgramingIsTheFuture/ppx_default/issues")

(package
 (name ppx_default)
 (synopsis "ppx_default: Default your types."))
