(lang dune 3.10)

(name ppx_default)

(generate_opam_files true)

(authors "ProgramingIsTheFuture")
(maintainers "ProgramingIsTheFuture")
(homepage "https://github.com/ProgramingIsTheFuture/ppx_default")
(bug_reports "https://github.com/ProgramingIsTheFuture/ppx_default/issues")

(package
 (name ppx_default)
 (synopsis "Generate default values for your types"))
